<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Date Range Selector -->
    <item
        android:id="@+id/action_date_range"
        android:icon="@drawable/ic_date_range"
        android:title="@string/date_range"
        app:showAsAction="ifRoom" />

    <!-- Export CSV -->
    <item
        android:id="@+id/action_export_csv"
        android:title="@string/export_as_csv"
        app:showAsAction="never" />

    <!-- Export JSON -->
    <item
        android:id="@+id/action_export_json"
        android:title="@string/export_as_json"
        app:showAsAction="never" />

    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

</menu>