<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Refresh Action -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <!-- Add Food Item -->
    <item
        android:id="@+id/action_add_food"
        android:icon="@drawable/ic_add"
        android:title="@string/add_food_item"
        app:showAsAction="ifRoom" />

    <!-- Export Data -->
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/generate_report"
        app:showAsAction="ifRoom" />

    <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>